--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -40,8 +40,6 @@
     </div>    
 </script>
 
-MAP HERE
-
 <div class="row">
   <div class="col-sm-12">
     <div class="list front-callout">
@@ -58,11 +56,11 @@ MAP HERE
 
 <div class="row cirkle-vis">
   <div class="col-sm-3 col-sm-offset-3">
-    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
+    <oipa-pie-chart group-by="sector" aggregation-key="count"></oipa-pie-chart>
     <h4>Project distribution</h4>
   </div>
   <div class="col-sm-3">
-    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
+    <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund"></oipa-pie-chart>
     <h4>Budget distibution</h4>
   </div>
 </div>
