--- a/templates/sectors/sectors-view-list.html
+++ b/templates/sectors/sectors-view-list.html
@@ -8,5 +8,6 @@
         search-value="vm.searchValue"
         submit-search="vm.submitSearch"></top-navbar>
      -->
+    <countries-geo-map map-height='350px' map-legend='false' map-dropdown='false'></countries-geo-map>
     <sector-list search-value="vm.sectorSearchValue"></sector-list>
 </div>
