--- a/templates/activities/activities-view-list-map.html
+++ b/templates/activities/activities-view-list-map.html
@@ -2,9 +2,7 @@
 
     <filter-bar views="[{'id':'activities', 'name': 'Map & list'}, {'id':'activities-list', 'name': 'List'}]" current-page="activities"></filter-bar>
 
-    <temp-locations-geo-map map-height='400px' map-dropdown='true'></temp-locations-geo-map>
-
-    <!-- <activities-geomap></activities-geomap> -->
+    <locations-geo-map map-height='400px'></locations-geo-map>
 
     <activity-list></activity-list>
 
