--- a/templates/countries/countries-map.html
+++ b/templates/countries/countries-map.html
@@ -1,7 +1,5 @@
-<leaflet 
-    defaults="defaults" 
-    center="center" 
-    markers="markers" 
-    height="400px" 
-    width="100%">
-</leaflet>
+<div class="map hidden-xs">
+  <div class="geomap-mask">
+    <leaflet defaults="vm.defaults" center="vm.center" markers="vm.markers" layers="vm.layers" height="{{vm.mapHeight}}" width="100%"></leaflet>
+  </div>
+</div>
