--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -14,11 +14,11 @@
 
 <div class="row cirkle-vis">
   <div class="col-sm-3 col-sm-offset-3">
-    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
+    <oipa-pie-chart group-by="recipient_country" aggregation-key="count"></oipa-pie-chart>
     <h4>Project distribution</h4>
   </div>
   <div class="col-sm-3">
-    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
+    <oipa-pie-chart group-by="recipient_country" aggregation-key="incoming_fund"></oipa-pie-chart>
     <h4>Budget distibution</h4>
   </div>
 </div>
