--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -41,32 +41,35 @@
 </script>
 
 <div class="row">
-  <div class="col-sm-12">
-    <div class="list front-callout">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="panel">
-            With XX programmes and XX projects in {{vm.totalSectors}} sectors and XX countries.
-          </div>
+    <div class="col-sm-12">
+        <div class="list front-callout">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="panel">
+                        With XX programmes and XX projects in {{vm.totalSectors}} sectors and XX countries.
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 
 <div class="row cirkle-vis">
-  <div class="col-sm-3 col-sm-offset-3">
-    <oipa-pie-chart group-by="sector" aggregation-key="count"></oipa-pie-chart>
-    <h4>Project distribution</h4>
-  </div>
-  <div class="col-sm-3">
-    <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund"></oipa-pie-chart>
-    <h4>Budget distibution</h4>
-  </div>
+    <div class="col-xs-12">
+        <div class="panel lightblue clearfix no-padding-top">
+            <div class="row">
+                <div class="col-sm-3 col-sm-offset-3">
+                    <oipa-pie-chart group-by="sector" aggregation-key="count"></oipa-pie-chart>
+                    <h4>Project distribution</h4>
+                </div>
+                <div class="col-sm-3">
+                    <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund"></oipa-pie-chart>
+                    <h4>Budget distibution</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-<hr class="darkblue">
-
 
 <div class="container list-view-wrapper">
     <div class="row">
