--- a/templates/programmes/programmes-list.html
+++ b/templates/programmes/programmes-list.html
@@ -15,17 +15,21 @@ MAP HERE
 </div>
 
 <div class="row cirkle-vis">
-  <div class="col-sm-3 col-sm-offset-3">
-    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
-    <h3>Project distribution</h3>
-  </div>
-  <div class="col-sm-3">
-    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
-    <h3>Budget distibution</h3>
-  </div>
+    <div class="col-xs-12">
+        <div class="panel lightblue clearfix no-padding-top">
+            <div class="row">
+                <div class="col-sm-3 col-sm-offset-3">
+                    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
+                    <h4>Project distribution</h4>
+                </div>
+                <div class="col-sm-3">
+                    <oipa-pie-chart group-by="activity_status" aggregation-key="count"></oipa-pie-chart>
+                    <h4>Budget distibution</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-<hr class="darkblue">
 
 <div class="container">  
     <div class="row">
