--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -50,7 +50,7 @@
             <th width="500">Project title</th>
             <th>Project status</th>
             <th>Active in country</th>
-            <th>Total budget</th>
+            <th width="200">Total budget</th>
         </tr>
     </thead>
     <tbody>
