--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -56,7 +56,7 @@
 
 <div class="row cirkle-vis">
     <div class="col-xs-12">
-        <div class="panel lightblue clearfix no-padding-top">
+        <div class="panel lightblue clearfix no-padding-top no-margin-bottom">
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-3">
                     <oipa-pie-chart group-by="sector" aggregation-key="count"></oipa-pie-chart>
