--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -14,7 +14,7 @@
 
 <div class="row cirkle-vis">
     <div class="col-xs-12">
-        <div class="panel lightblue clearfix no-padding-top">
+        <div class="panel lightblue clearfix no-padding-top no-margin-bottom">
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-3">
                     <oipa-pie-chart group-by="recipient_country" aggregation-key="count"></oipa-pie-chart>
