--- a/templates/implementingOrganisations/implementing-organisations-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-list.html
@@ -16,7 +16,7 @@ MAP HERE
 
 <div class="row cirkle-vis">
     <div class="col-xs-12">
-        <div class="panel lightblue clearfix no-padding-top">
+        <div class="panel lightblue clearfix no-padding-top no-margin-bottom">
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-3">
                     <oipa-pie-chart group-by="organisation" aggregation-key="count"></oipa-pie-chart>
