removed blue bar on sub pages and search

--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -1,4 +1,10 @@
-<div class="row">
+<div class="row" 
+    ng-show="
+      vm.currentPage != 'search' &&
+      vm.currentPage != 'programme' &&
+      vm.currentPage != 'country' &&
+      vm.currentPage != 'sector' &&
+      vm.currentPage != 'organisation'">
   <div class="col-sm-12">
     <div class="list front-callout">
       <div class="row">
@@ -36,7 +42,7 @@
 
     <div ng-if='vm.totalActivities == 0' class="row">
         <div class="col-sm-12">
-            <div class="extra-padding">
+            <div class="no-results">
                 <h2>Nothing found</h2>
                 <p>Please select some different filters.</p>
             </div>
@@ -44,7 +50,7 @@
     </div>
 </div>
 
-<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview">
+<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview" ng-show="vm.activities.length != 0">
     <thead>
         <tr>
             <th width="500">Project title</th>
@@ -55,7 +61,6 @@
     </thead>
     <tbody>
         <tr
-            ng-show="vm.activities.length != 0"
             ng-repeat="item in vm.activities">
             <td>
               <a ui-sref="activiteit({ activity_id: item.id })">
