--- a/templates/programmes/programmes-list.html
+++ b/templates/programmes/programmes-list.html
@@ -1,6 +1,12 @@
 MAP HERE
 
-<div class="row">
+<div class="row" 
+    ng-show="
+      vm.currentPage != 'search' &&
+      vm.currentPage != 'programme' &&
+      vm.currentPage != 'country' &&
+      vm.currentPage != 'sector' &&
+      vm.currentPage != 'organisation'">
   <div class="col-sm-12">
     <div class="list front-callout">
       <div class="row">
@@ -53,7 +59,7 @@ MAP HERE
 
     <div ng-if='vm.totalActivities == 0' class="row">
         <div class="col-sm-12">
-            <div class="extra-padding">
+            <div class="no-results">
                 <h2>Nothing found</h2>
                 <p>Please select some different filters.</p>
             </div>
@@ -61,7 +67,7 @@ MAP HERE
     </div>
 </div>
 
-<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview">
+<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview" ng-show="vm.activities.length != 0">
     <thead>
         <tr>
             <th width="500">Programme title</th>
@@ -73,7 +79,6 @@ MAP HERE
     </thead>
     <tbody>
         <tr
-            ng-show="vm.activities.length != 0"
             ng-repeat="item in vm.activities">
             <td><a ui-sref="programme({ programme_id: item.id })">{{ item.title.narratives[0].text }}</a></td>
             <td>XX projects</td>
