--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -7,7 +7,7 @@
     <div class="container extra">
 
         <div class="white no-margin-bottom">
-            <h1 class="no-margin-bottom"><i class="icon presentation"></i> {{vm.sector.name}}</h1>
+            <h1 class="no-margin-bottom">{{vm.sector.name}}</h1>
         </div>
 
         <hr class="darkblue no-margin-bottom">
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="white no-margin-bottom no-padding-bottom">
-                        <h2><i class="icon euro"></i>Financial</h2>
+                        <h2>Financial</h2>
                     </div>
                     <div class="panel lightblue with-table no-header">
                         <table class="no-format">
