--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -1,4 +1,10 @@
-<div class="row">
+<div class="row" 
+    ng-show="
+      vm.currentPage != 'search' &&
+      vm.currentPage != 'programme' &&
+      vm.currentPage != 'country' &&
+      vm.currentPage != 'sector' &&
+      vm.currentPage != 'organisation'">
   <div class="col-sm-12">
     <div class="list front-callout">
       <div class="row">
@@ -51,7 +57,7 @@
 
     <div ng-if='vm.totalCountries == 0' class="row">
         <div class="col-sm-12">
-            <div class="extra-padding">
+            <div class="no-results">
                 <h2>Nothing found</h2>
                 <p>Please select some different filters.</p>
             </div>
@@ -59,7 +65,7 @@
     </div>
 </div>
 
-<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview">
+<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview" ng-show="vm.countries.length != 0">
     <thead>
         <tr>
             <th>Country</th>
@@ -70,7 +76,6 @@
     </thead>
     <tbody>
         <tr
-            ng-show="vm.countries.length != 0"
             ng-repeat="item in vm.countries">
             <td><a ui-sref="country({ country_id: item.recipient_country.code })"><span class="flag-icon flag-icon-{{item.recipient_country.code | lowercase }} "></span>{{ item.recipient_country.name }}</a></td>
             <td>{{item.count}} projects</td>
