--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -1,10 +1,4 @@
-<div class="row" 
-    ng-show="
-      vm.currentPage != 'search' &&
-      vm.currentPage != 'programme' &&
-      vm.currentPage != 'country' &&
-      vm.currentPage != 'sector' &&
-      vm.currentPage != 'organisation'">
+<div class="row" ng-if="vm.currentPage === 'activities'">
   <div class="col-sm-12">
     <div class="list front-callout">
       <div class="row">
