--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -1,10 +1,4 @@
-<div class="row" 
-    ng-show="
-      vm.currentPage != 'search' &&
-      vm.currentPage != 'programme' &&
-      vm.currentPage != 'country' &&
-      vm.currentPage != 'sector' &&
-      vm.currentPage != 'organisation'">
+<div class="row" ng-if="vm.currentPage === 'countries'">
   <div class="col-sm-12">
     <div class="list front-callout">
       <div class="row">
@@ -22,11 +16,11 @@
     <div class="col-xs-12">
         <div class="panel lightblue clearfix no-padding-top no-margin-bottom">
             <div class="row">
-                <div class="col-sm-3 col-sm-offset-3">
+                <div class="col-sm-3 col-sm-offset-3 chart">
                     <oipa-pie-chart group-by="recipient_country" aggregation-key="count"></oipa-pie-chart>
                     <h4>Project distribution</h4>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 chart">
                     <oipa-pie-chart group-by="recipient_country" aggregation-key="incoming_fund"></oipa-pie-chart>
                     <h4>Budget distibution</h4>
                 </div>
