slider budget fxd

--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -50,7 +50,7 @@
   </div>
 </div>
 
-<div class="row hidden-xs">
+<div class="row">
     <div class="col-sm-12 map">
         <div class="geomap-mask">  
             <countries-geo-map map-height='450px' map-legend='false'></countries-geo-map>
