--- a/templates/_partials/filterbar/filter-bar.html
+++ b/templates/_partials/filterbar/filter-bar.html
@@ -1,6 +1,6 @@
-<div class="pad-helper hidden-xs"></div>
+<div class="pad-helper"></div>
 
-<div class="filters-fixed hidden-xs">
+<div class="filters-fixed">
 
   <div class="bg-wrap">
 
