--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -1,4 +1,4 @@
-<div class="row" ng-if="vm.currentPage === 'countries'">
+<div class="row" ng-if="vm.currentPage === 'locations-map'">
   <div class="col-sm-12">
     <div class="list front-callout">
       <div class="row">
