--- a/templates/filters/filter-panel-budget.html
+++ b/templates/filters/filter-panel-budget.html
@@ -10,12 +10,12 @@
 		<div class="slide" ng-class="{ 'active' : vm.on }">	
 			<slider slider-id="time-slider"
 		        ng-model="vm.budgetValue"
-		        value="[100000, 300000]"
+		        value="[100000, 400000]"
 		        min="0"
 		        max="3000000"
 		        step="1"
 		        range="true"
-		        precision="2"
+		        precision="0"
 		        reversed="false"
 		        orientation="horizontal"
 		        handle="round"
@@ -23,7 +23,8 @@
 		        ng-disabled="false"
 		        naturalarrowkeys="false"
 		        selection="before"
-		        tooltip="always">
+		        tooltip="always"
+		        tooltipsplit="true">
 			</slider>
 		</div>
 		<button class="btn btn-default btn-openaid btn-save" ng-click="vm.save()">Save</button>
