--- a/templates/locations/locations-geomap.html
+++ b/templates/locations/locations-geomap.html
@@ -1,4 +1,4 @@
-<div class="map hidden-xs">
+<div class="map">
   <div class="geomap-mask">
     <leaflet defaults="vm.defaults" center="vm.center" markers="vm.markers" layers="vm.layers" height="{{vm.mapHeight}}" width="100%"></leaflet>
   </div>
