css table detailed rep

--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -360,7 +360,7 @@
 
                     <h3>Transactions</h3>
 
-                    <table class="finance">
+                    <table class="finance no-blue">
                         <thead>
                             <tr>
                                 <th>Type</th>
