--- a/templates/implementingOrganisations/implementing-organisations-view-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-view-list.html
@@ -3,10 +3,8 @@
     <filter-bar 
         views="[{'id':'organisations', 'name': 'Bekijk lijst'}]"></filter-bar>
 
-    <!-- <top-navbar 
-        search-value="vm.searchValue"
-        submit-search="vm.submitSearch"></top-navbar>
- -->
+ 	<countries-geo-map map-height='350px' map-legend='false' map-dropdown='false'></countries-geo-map>
+
     <implementing-organisations-list></implementing-organisations-list>
     
 </div>
